Fixed the bugs in CorsConfig, GithubOAuth2UserInfo, GoogleOAuth2UserInfo,OAuth2AuthenticationSuccessHandler, AuthService